php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #79468 SIGSEGV when closing stream handle with a stream filter appended
Submitted: 2020-04-12 09:01 UTC Modified: -
From: hanskrentel at yahoo dot com Assigned:
Status: Closed Package: Streams related
PHP Version: Irrelevant OS: Linux
Private report: No CVE-ID: None
 [2020-04-12 09:01 UTC] hanskrentel at yahoo dot com
Description:
------------
Example exits with:

Process finished with exit code 139 (interrupted by signal 11: SIGSEGV)

It does not when *not* fclose($handle); at the end.

Related?: #75931


Test script:
---------------
https://3v4l.org/QR6ev

Expected result:
----------------
exit status 0

Actual result:
--------------
exit status 139

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2020-04-14 10:02 UTC] nikic@php.net
Automatic comment on behalf of thedinosaurmail@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=95eaccd0bb901495323c36282d4e783556be1964
Log: Fixed bug #79468
 [2020-04-14 10:02 UTC] nikic@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 11:00:02 2026 UTC