Fixed bug #79468

Close the stream filter resources when removing them from the stream.